created readme files and fixed doxygen documentations

--- a/Section 2/latex/test_8h.tex
+++ b/Section 2/latex/test_8h.tex
@@ -17,7 +17,9 @@ void \mbox{\hyperlink{test_8h_aab7754af39cd215999a7e67f5a4e1948}{test}} (int inp
 \doxysubsection{Detailed Description}
 It includes declaration of \mbox{\hyperlink{sin__cos_8h_a13c31ca258a4339a1b0b21e6222b13dd}{sin(int x)}} and \mbox{\hyperlink{sin__cos_8h_a539ff788abfcbf98c54a12d14728b89b}{cos(int x)}} functions. 
 
-It includes declaration of \mbox{\hyperlink{test_8cpp_aab7754af39cd215999a7e67f5a4e1948}{test()}} method which calculates actual output and matches with expected outputs for test case and prints the results.
+It includes declaration of \mbox{\hyperlink{test_8h_aab7754af39cd215999a7e67f5a4e1948}{test()}} method which calculates actual output and matches with expected outputs for test case and prints the results.
+
+It includes implementation of \mbox{\hyperlink{test_8h_aab7754af39cd215999a7e67f5a4e1948}{test()}} method which calculates actual output and matches with expected outputs for test case and prints the results.
 
 \begin{DoxyAuthor}{Author}
 Harpreet Singh 
